[project]
name = "oscars_toolbox"
version = "0.1.0"
authors = [
  { name = "Oscar Scholin", email = "scholinoscar@gmail.com" }
]
description = "A package for optimization. See the GitHub repo for instructions and version notes."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/oscars47/oscars-toolbox"
Issues = "https://github.com/oscars47/oscars-toolbox/issues"
